--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,14 @@
   "manifest_version": 2,
   "name": "Tab Saver",
   "description": "This extension allows the user to save the URL of opens tabs to a file",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "minimum_chrome_version": "46",
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
       "js": [
         "vendor/lodash.min.js",
+        "vendor/promise.min.js",
         "vendor/Blob.js",
         "vendor/FileSaver.min.js"
       ]
